--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.294.0",
     "next": "^14.2.28",
     "next-themes": "^0.2.1",
+    "openai": "^4.96.0",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
