--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "japanese-portfolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "populate-db": "node scripts/populateSupabase.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/cli": "^4.1.4",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
@@ -16,6 +19,7 @@
     "next": "^14.2.28",
     "next-themes": "^0.2.1",
     "openai": "^4.96.0",
+    "pdf-parse": "github:iamh2o/pdf-parse#1.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
@@ -24,9 +28,11 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^16.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.5.3",
