--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "populate-db": "node scripts/populateSupabase.js"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.11",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/cli": "^4.1.4",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.294.0",
+    "motion": "^12.9.2",
     "next": "^14.2.28",
     "next-themes": "^0.2.1",
     "openai": "^4.96.0",
     "pdf-parse": "github:iamh2o/pdf-parse#1.1.3",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
