--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "unicornstudio-react": "^1.4.29-1"
   },
   "devDependencies": {
     "@types/node": "^20",
