--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/cli": "^4.1.4",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
+    "katex": "^0.16.25",
     "lucide-react": "^0.294.0",
     "motion": "^12.9.2",
     "next": "^14.2.28",
@@ -29,7 +30,9 @@
     "react-intersection-observer": "^9.5.3",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "unicornstudio-react": "^1.4.29-1"
