--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-hover-card": "^1.1.11",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/cli": "^4.1.4",
+    "@tailwindcss/typography": "^0.5.19",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
     "katex": "^0.16.25",
@@ -24,6 +25,7 @@
     "openai": "^4.96.0",
     "pdf-parse": "github:iamh2o/pdf-parse#1.1.3",
     "posthog-js": "^1.236.7",
+    "posthog-node": "^5.24.10",
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
