--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "katex": "^0.16.25",
     "lucide-react": "^0.294.0",
     "motion": "^12.9.2",
-    "next": "14.2.35",
+    "next": "^16.1.6",
     "next-themes": "^0.2.1",
     "openai": "^4.96.0",
     "pdf-parse": "github:iamh2o/pdf-parse#1.1.3",
